--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 		"target": "es6",
 		"outDir": "out",
 		"lib": [
-			"es6", "DOM"
+			"es6", "DOM", "es2021"
 		],
 		"sourceMap": true,
 		"rootDir": "src",
